--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,10 @@ private static void retrofit(configuration) {
     configuration.implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     configuration.implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
     configuration.implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    configuration.implementation 'com.facebook.stetho:stetho:1.5.0'
+    configuration.implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+
 }
 
 private static void rxJava(configuration) {
