--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
             applicationId "com.bala.openweathermap.dev"
             buildConfigField 'String', 'BASE_URL', '"http://api.openweathermap.org/data/2.5/"'
             buildConfigField 'String', 'MAP_API_KEY', '"AIzaSyBnE1mqqsq6HMV8TWN7zRhBaOQyi-DKnOE"'
+            buildConfigField 'String', 'APPID', '"752cfc87ae78d1fa52bbb476970f027c"'
             resValue 'string', "map_api_key", "AIzaSyBnE1mqqsq6HMV8TWN7zRhBaOQyi-DKnOE"
             versionCode 1
             versionName "1.0"
@@ -48,6 +49,7 @@ android {
             applicationId "com.bala.openweathermap"
             resValue 'string', "map_api_key", "AIzaSyBnE1mqqsq6HMV8TWN7zRhBaOQyi-DKnOE"
             buildConfigField 'String', 'MAP_API_KEY', '"AIzaSyBnE1mqqsq6HMV8TWN7zRhBaOQyi-DKnOE"'
+            buildConfigField 'String', 'APPID', '"752cfc87ae78d1fa52bbb476970f027c"'
             buildConfigField 'String', 'BASE_URL', '"http://api.openweathermap.org/data/2.5/"'
             versionCode 1
             versionName "1.0"
